--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -24,7 +24,7 @@
         oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, że można szybko
         pokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, bacznie przyglądam się rozwojowi i zastosowaniom między innymi
         sztucznej inteligencji w medycynie.</p>
-    <p>Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blanks>link do repozytorium</a>
+    <p>Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
     </p>
     </article>
 </body>
