--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -20,12 +20,53 @@
     <br>
     <article>
     <h3>O mnie</h3>
-    <p>Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
+    <p id="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
         oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, że można szybko
         pokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, bacznie przyglądam się rozwojowi i zastosowaniom między innymi
         sztucznej inteligencji w medycynie.</p>
+        <img align="right" src="kot.jpg">
     <p>Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
     </p>
     </article>
+    <br>
+    <article>
+        <h4>Moje zainteresowania pozainformatyczne</h4>
+        <dl>
+            <dt>Teatr</dt>
+                <dd>Zawsze czułem się dość swobodnie na scenie.
+                    W liceum przez 2 lata byłem częścią amatorskiego teatru w mojej rodzinnej miejscowości.
+                    Udało nam się przedstawić sztukę, pt. "Pałac" na podstawie tekstu Marty Sokołowskiej.</dd>
+            <dt>Sporty</dt>
+                <dd>Od półtora roku staram się regularnie ćwiczyć siłowo. Satysfakcjonujący jest widoczny
+                    z miesiąca na miesiąc progres. W dodatku podoba mi się to, że mogę takie wyjście
+                    na trening traktować jako spotkanie z kolegami i wzajemnie się motywować.
+                </dd>
+            <dt>Gry komputerowe</dt>
+                <dd>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
+                    ze względu na studia ostatnio mam coraz mniej czasu na to hobby, jednak dalej pozostaje
+                    ono w mojej pamięci. Najbardziej podobają mi się gry dopracowane albo pod względem
+                    narracji, stylistyki i opowiadanej historii albo z ciekawymi rozwiązaniami rozgrywki.
+                </dd>
+        </dl>
+    </article>
+    <article>
+        <h4>Moje zainteresowania informatyczne</h4>
+        <dl>
+            <dt>HTML i CSS</dt>
+                <dd>Jest to dla mnie nowy temat, ponieważ kurs ten trwa dopiero kilka tygodni. Mimo to
+                    design stron internetowych wydaje mi się interesujący, ponieważ
+                </dd>
+        </dl>
+    </article>
+    <br>
+    <br>
+    <br>
+    <footer>
+        <h5>KONTAKT</h5>
+        <ul>
+            <li>e-mail: 268515@student.pwr.edu.pl</li>
+            <li>telefon: 123456789</li>
+        </ul>
+    </footer>
 </body>
 </html>
