"mobile screen tests"

--- a/Lista1/moje_projekty.html
+++ b/Lista1/moje_projekty.html
@@ -9,10 +9,18 @@
 </head>
 <body>
     <nav>
-        <a href="" class="linki">Ciekawe działy matematyki</a>
+        <a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>
         <a href="index.html" class="linki">Strona główna</a>
-        <a href="" class="linki">Zainteresowania informatyczne</a>
-        <a href="" class="linki">Zainteresowania pozainformatyczne</a>
+        <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
+        <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
     </nav>
+
+    <footer>
+        <h5>KONTAKT</h5>
+        <ul>
+            <li>e-mail: 268515@student.pwr.edu.pl</li>
+            <li>telefon: 123456789</li>
+        </ul>
+    </footer>
 </body>
 </html>
