--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -12,51 +12,37 @@
     <h1 id="heading">Nowoczesne Technologie WWW</h1>
     </div>
     <nav>
-    <a href="" class="linki">Ciekawe działy matematyki</a>
+    <a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>
     <a href="moje_projekty.html" class="linki">Moje projekty</a>
-    <a href="" class="linki">Zainteresowania informatyczne</a>
-    <a href="" class="linki">Zainteresowania pozainformatyczne</a>
+    <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
+    <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
     </nav>
     <br>
-    <article>
+    <main>
     <h3>O mnie</h3>
     <p id="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
-        oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, że można szybko
-        pokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, bacznie przyglądam się rozwojowi i zastosowaniom między innymi
-        sztucznej inteligencji w medycynie.</p>
+        oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań
+        informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, 
+        że można szybkopokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, 
+        bacznie przyglądam się rozwojowi i zastosowaniom między innymi sztucznej inteligencji w medycynie.</p>
         <img alt="tu jest obrazek" src="kot.jpg">
     <p>Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
     </p>
-    </article>
+    </main>
     <br>
     <article>
         <h4>Moje zainteresowania pozainformatyczne</h4>
-        <dl>
-            <dt>Teatr</dt>
-                <dd>Zawsze czułem się dość swobodnie na scenie.
-                    W liceum przez 2 lata byłem częścią amatorskiego teatru w mojej rodzinnej miejscowości.
-                    Udało nam się przedstawić sztukę, pt. "Pałac" na podstawie tekstu Marty Sokołowskiej.</dd>
-            <dt>Sporty</dt>
-                <dd>Od półtora roku staram się regularnie ćwiczyć siłowo. Satysfakcjonujący jest widoczny
-                    z miesiąca na miesiąc progres. W dodatku podoba mi się to, że mogę takie wyjście
-                    na trening traktować jako spotkanie z kolegami i wzajemnie się motywować.
-                </dd>
-            <dt>Gry komputerowe</dt>
-                <dd>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
-                    ze względu na studia ostatnio mam coraz mniej czasu na to hobby, jednak dalej pozostaje
-                    ono w mojej pamięci. Najbardziej podobają mi się gry dopracowane albo pod względem
-                    narracji, stylistyki i opowiadanej historii albo z ciekawymi rozwiązaniami rozgrywki.
-                </dd>
-        </dl>
+        <ul>
+            <li>Teatr</li>
+            <li>Sporty siłowe i turystyka górska</li>
+            <li>Gry komputerowe</li>
+        </ul>
     </article>
     <article>
         <h4>Moje zainteresowania informatyczne</h4>
-        <dl>
-            <dt>HTML i CSS</dt>
-                <dd>Jest to dla mnie nowy temat, ponieważ kurs ten trwa dopiero kilka tygodni. Mimo to
-                    design stron internetowych wydaje mi się interesujący, ponieważ
-                </dd>
-        </dl>
+        <ul>
+            <li>HTML, CSS</li>
+        </ul>
     </article>
     <br>
     <br>
