--- a/Lista1/Zainteresowania_pozainformatyczne.html
+++ b/Lista1/Zainteresowania_pozainformatyczne.html
@@ -14,6 +14,49 @@
         <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
         <a href="index.html" class="linki">Strona główna</a>
     </nav>
+    <main id="ZI">
+        <section>
+            <h1>Moje zainteresowania pozainformatyczne</h1>
+            <p>Przed rozpoczęciem studiów nie miałem dużej styczności z programowaniem i szeroko pojętą informatyką. Mimo to
+                zawsze lubiłem matematykę, chemię
+                i rozwiązywaniem skomplikowanych problemów, stąd zdecydowałem się na ten kierunek. </p>
+        </section>
+        <br>
+        <section>
+            <h4>Tworzenie stron internetowych</h4>
+            <p>Jest to dla mnie nowy temat, ponieważ uczę się tego dopiero od kilku tygodni. Mimo to
+                design stron internetowych wydaje mi się interesujący, ponieważ szybko można zauważyć efekty pracy.
+                W dodatku dziedzina ta pozwala na bardzo dużą kreatywność, a w sieci możemy znaleźć mnóstwo inspiracji.</p>
+        </section>
+        <br>
+        <section>
+            <h4>Sztuczna inteligencja</h4>
+            <p> Niedawno każda osoba, którą ciekawi ten temat uzyskała dostęp do potężnego narzędzia jakim jest ChatGPT,
+                które pozwala odpowiedzieć na szereg różnorakich, często abstrakcyjnych problemów i zadań. Dzięki temu
+                sztuczna inteligencja jest dziś w centrum zainteresowania świata informatyki. Fakt, że już teraz
+                otrzymaliśmy
+                takie oprogramowanie może dawać nam nadzieję na prędki rozwój AI w wielu dziedzinach nauki i biznesu.
+                Również
+                rozpocząłem w tym semestrze na Politechnice kurs będący wprowadzeniem do świata sztucznej inteligencji,
+                dzięki
+                któremu mam nadzieję lepiej ją poznać.
+            </p>
+        </section>
+        <br>
+        <section>
+            <h4>Bazy danych</h4>
+            <p>W zeszłym semestrze realizowałem kurs z baz danych na Politechnice. O ile pisanie samych bardziej
+                skomplikowanych
+                procedur, funkcji i triggerów nie przypadło mi do gustu, ze względu na specyficzną składnię języka, tak
+                zaciekawiło
+                mnie samo projektowanie relacyjnych baz danych, ponieważ jest to zadanie łączące ze sobą pracę kreatywną z
+                analityczną,
+                ponieważ musimy pamiętać o różnych regułach, czy normalizacji.
+    
+            </p>
+        </section>
+    </main>
+    <br>
     <footer>
         <h5>KONTAKT</h5>
         <ul>
