--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -18,26 +18,24 @@
     <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
     </nav>
     <main>
-    <h3>O mnie</h3>
-    <p id="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
+    <h3 class="omnie">O mnie</h3>
+    <p class="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
         oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań
         informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, 
         że można szybkopokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, 
         bacznie przyglądam się rozwojowi i zastosowaniom między innymi sztucznej inteligencji w medycynie.</p>
         <img alt="tu jest obrazek" src="kot.jpg">
-    <p>Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
+    <p class="omnie">Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
     </p>
     </main>
     <br>
-    <article>
+    <article class="omnie">
         <h4>Moje zainteresowania pozainformatyczne</h4>
         <ul>
             <li>Teatr</li>
             <li>Sporty siłowe i turystyka górska</li>
             <li>Gry komputerowe</li>
         </ul>
-    </article>
-    <article>
         <h4>Moje zainteresowania informatyczne</h4>
         <ul>
             <li>HTML, CSS</li>
