--- a/Lista1/Ciekawe_działy_matematyki.html
+++ b/Lista1/Ciekawe_działy_matematyki.html
@@ -14,5 +14,13 @@
         <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
         <a href="index.html" class="linki">Strona główna</a>
     </nav>
+    
+    <footer>
+        <h5>KONTAKT</h5>
+        <ul>
+            <li>e-mail: 268515@student.pwr.edu.pl</li>
+            <li>telefon: 123456789</li>
+        </ul>
+    </footer>
 </body>
 </html>
