--- a/Lista1/Zainteresowania_pozainformatyczne.html
+++ b/Lista1/Zainteresowania_pozainformatyczne.html
@@ -17,42 +17,35 @@
     <main id="ZI">
         <section>
             <h1>Moje zainteresowania pozainformatyczne</h1>
-            <p>Przed rozpoczęciem studiów nie miałem dużej styczności z programowaniem i szeroko pojętą informatyką. Mimo to
-                zawsze lubiłem matematykę, chemię
-                i rozwiązywaniem skomplikowanych problemów, stąd zdecydowałem się na ten kierunek. </p>
-        </section>
-        <br>
-        <section>
-            <h4>Tworzenie stron internetowych</h4>
-            <p>Jest to dla mnie nowy temat, ponieważ uczę się tego dopiero od kilku tygodni. Mimo to
-                design stron internetowych wydaje mi się interesujący, ponieważ szybko można zauważyć efekty pracy.
-                W dodatku dziedzina ta pozwala na bardzo dużą kreatywność, a w sieci możemy znaleźć mnóstwo inspiracji.</p>
-        </section>
-        <br>
-        <section>
-            <h4>Sztuczna inteligencja</h4>
-            <p> Niedawno każda osoba, którą ciekawi ten temat uzyskała dostęp do potężnego narzędzia jakim jest ChatGPT,
-                które pozwala odpowiedzieć na szereg różnorakich, często abstrakcyjnych problemów i zadań. Dzięki temu
-                sztuczna inteligencja jest dziś w centrum zainteresowania świata informatyki. Fakt, że już teraz
-                otrzymaliśmy
-                takie oprogramowanie może dawać nam nadzieję na prędki rozwój AI w wielu dziedzinach nauki i biznesu.
-                Również
-                rozpocząłem w tym semestrze na Politechnice kurs będący wprowadzeniem do świata sztucznej inteligencji,
-                dzięki
-                któremu mam nadzieję lepiej ją poznać.
+            <p>W wolnym czasie od nauki i list staram się spędzać czas na różnorakie sposoby, a moje ulubione są wymienione poniżej.
             </p>
         </section>
         <br>
         <section>
-            <h4>Bazy danych</h4>
-            <p>W zeszłym semestrze realizowałem kurs z baz danych na Politechnice. O ile pisanie samych bardziej
-                skomplikowanych
-                procedur, funkcji i triggerów nie przypadło mi do gustu, ze względu na specyficzną składnię języka, tak
-                zaciekawiło
-                mnie samo projektowanie relacyjnych baz danych, ponieważ jest to zadanie łączące ze sobą pracę kreatywną z
-                analityczną,
-                ponieważ musimy pamiętać o różnych regułach, czy normalizacji.
-    
+            <h4>Teatr</h4>
+            <p>Zawsze czułem się dość swobodnie na scenie.
+            W liceum przez 2 lata byłem częścią amatorskiego teatru w mojej rodzinnej miejscowości.
+            Udało nam się przedstawić sztukę, pt. "Pałac" na podstawie tekstu Marty Sokołowskiej. W aktorstwie podoba mi się to,
+            że można poznać różne emocje, z którymi nie ma się na co dzień do czynienia, a także to, że zawsze reżyser ma swoją wizję
+            i może nas ukierunkować, więc nie jesteśmy pozostawieni sami sobie. W dodatku poznałem tam wielu ciekawych i przesympatycznych ludzi.</p>
+        </section>
+        <br>
+        <section>
+            <h4>Gry komputerowe</h4>
+            <p>>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
+            ze względu na studia ostatnio mam coraz mniej czasu na to hobby, jednak dalej pozostaje
+            ono w mojej pamięci. Najbardziej podobają mi się gry stawiające na opowiadanie intrygujących historii,
+            ale lubię także gry mniej na nią stawiające, jednak broniące się oryginalną stylistyką i wciągającym gameplayem.
+            </p>
+        </section>
+        <br>
+        <section>
+            <h4>Sporty</h4>
+            <p>Jako dziecko nie byłem największym fanem aktywności fizycznej, jednak teraz zacząłem ją dużo bardziej doceniać. Od półtora
+                roku staram się regularnie trenować siłowo, co jest moją ulubioną aktywnością, ponieważ mogę taki trening traktować jako
+                spotkanie z kolegami i możemy wzajemnie się motywować. Również wyjątkowo przypadła mi do gustu turystyka górska dzięki wizycie
+                w Tatrach we wrześniu 2022 oraz pierwszym moim zimowym wyjściu w góry, w marcu 2023 w Karkonosze. Poniżej umieszczam kilka fotografii
+                z tych wypadów.
             </p>
         </section>
     </main>
@@ -67,21 +60,3 @@
 </body>
 </html>
 
-<!--
-<dl>
-<dt>Teatr</dt>
-<dd>Zawsze czułem się dość swobodnie na scenie.
-    W liceum przez 2 lata byłem częścią amatorskiego teatru w mojej rodzinnej miejscowości.
-    Udało nam się przedstawić sztukę, pt. "Pałac" na podstawie tekstu Marty Sokołowskiej.</dd>
-<dt>Sporty</dt>
-<dd>Od półtora roku staram się regularnie ćwiczyć siłowo. Satysfakcjonujący jest widoczny
-    z miesiąca na miesiąc progres. W dodatku podoba mi się to, że mogę takie wyjście
-    na trening traktować jako spotkanie z kolegami i wzajemnie się motywować.
-</dd>
-<dt>Gry komputerowe</dt>
-<dd>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
-    ze względu na studia ostatnio mam coraz mniej czasu na to hobby, jednak dalej pozostaje
-    ono w mojej pamięci. Najbardziej podobają mi się gry dopracowane albo pod względem
-    narracji, stylistyki i opowiadanej historii albo z ciekawymi rozwiązaniami rozgrywki.
-</dd>
-</dl>-->
