--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -19,12 +19,12 @@
     </nav>
     <main>
     <h3 class="omnie">O mnie</h3>
+    <img alt="tu jest obrazek" src="kot.jpg">
     <p class="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
         oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań
         informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, 
         że można szybkopokazać efekt swojego kodu, a w internecie jest mnóstwo inspiracji. Zgodnie także z moimi kierunkami studiów, 
         bacznie przyglądam się rozwojowi i zastosowaniom między innymi sztucznej inteligencji w medycynie.</p>
-        <img alt="tu jest obrazek" src="kot.jpg">
     <p class="omnie">Mój github: <a href="https://github.com/Voychu?tab=repositories" target=_blank>link do repozytorium</a>
     </p>
     </main>
@@ -39,6 +39,8 @@
         <h4>Moje zainteresowania informatyczne</h4>
         <ul>
             <li>HTML, CSS</li>
+            <li>Sztuczna inteligencja</li>
+            <li>Bazy danych</li>
         </ul>
     </article>
     <footer>
