--- a/Lista1/Ciekawe_działy_matematyki.html
+++ b/Lista1/Ciekawe_działy_matematyki.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matematyka</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <a href="index.html" class="linki">Strona główna</a>
         <a href="moje_projekty.html" class="linki">Moje projekty</a>
         <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
-        <a href="index.html" class="linki">Strona główna</a>
+        <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
     </nav>
     
     <footer>
@@ -23,4 +23,4 @@
         </ul>
     </footer>
 </body>
-</html>
+</html>-->
