--- a/Lista1/Zainteresowania_informatyczne.html
+++ b/Lista1/Zainteresowania_informatyczne.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>
+        <!--<a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>-->
         <a href="moje_projekty.html" class="linki">Moje projekty</a>
         <a href="index.html" class="linki">Strona główna</a>
         <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
@@ -35,7 +35,8 @@
             sztuczna inteligencja jest dziś w centrum zainteresowania świata informatyki. Fakt, że już teraz otrzymaliśmy
             takie oprogramowanie może dawać nam nadzieję na prędki rozwój AI w wielu dziedzinach nauki i biznesu. Również
             rozpocząłem w tym semestrze na Politechnice kurs będący wprowadzeniem do świata sztucznej inteligencji, dzięki
-            któremu mam nadzieję lepiej ją poznać. 
+            któremu mam nadzieję lepiej ją poznać.<br>
+            Link: <a href="https://www.facebook.com/profile.php?id=100086778875831" target=_blank>SKN AI w medycynie UMW</a> 
             </p>
         </section>
         <br>
@@ -45,7 +46,6 @@
                 procedur, funkcji i triggerów nie przypadło mi do gustu, ze względu na specyficzną składnię języka, tak zaciekawiło
                 mnie samo projektowanie relacyjnych baz danych, ponieważ jest to zadanie łączące ze sobą pracę kreatywną z analityczną,
                 ponieważ musimy pamiętać o różnych regułach, czy normalizacji.
-
             </p>
         </section>
     </main>
