--- a/Lista1/Zainteresowania_pozainformatyczne.html
+++ b/Lista1/Zainteresowania_pozainformatyczne.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zainteresowania pozainformatyczne</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
-        <a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>
+        <!--<a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>-->
         <a href="moje_projekty.html" class="linki">Moje projekty</a>
         <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
         <a href="index.html" class="linki">Strona główna</a>
@@ -48,6 +48,20 @@
                 z tych wypadów.
             </p>
         </section>
+        <div class="images">
+            <div class="row">
+            <img src="zdjęcia/IMG_0171.jpg" alt="g">
+            <img src="zdjęcia/IMG_0294.jpg  " alt="g">
+            <img src="zdjęcia/IMG_1405.jpg" alt="g">
+            <img src="zdjęcia/IMG_1407.jpg" alt="g">
+            </div>
+            <div class="row">
+            <img src="zdjęcia/IMG_0202.jpg" alt="g">
+            <img src="zdjęcia/IMG_2089.jpg" alt="g">
+            <img src="zdjęcia/334923783_1355768041632120_3309844568201102402_n.jpg" alt="g">
+            <img src="zdjęcia/334923783_1355768041632120_3309844568201102402_n.jpg" alt="g">
+            </div>
+        </div>
     </main>
     <br>
     <footer>
