--- a/Lista1/index.html
+++ b/Lista1/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class>
+    <div class="ey">
     <h1 id="heading">Nowoczesne Technologie WWW</h1>
     </div>
     <nav>
-    <a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>
+    <!--<a href="Ciekawe_działy_matematyki.html" class="linki">Ciekawe działy matematyki</a>-->
     <a href="moje_projekty.html" class="linki">Moje projekty</a>
     <a href="Zainteresowania_informatyczne.html" class="linki">Zainteresowania informatyczne</a>
     <a href="Zainteresowania_pozainformatyczne.html" class="linki">Zainteresowania pozainformatyczne</a>
     </nav>
     <main>
     <h3 class="omnie">O mnie</h3>
-    <img alt="tu jest obrazek" src="kot.jpg">
+    <img alt="tu jest obrazek" src="zdjęcia/kot.jpg">
     <p class="omnie">Nazywam się Wojciech Bajurny. Jestem studentem 2 roku informatyki algorytmicznej na Politechnice Wrocławskiej 
         oraz 3 roku na kierunku lekarskim na Uniwersytecie Medycznym im. Piastów Sląskich we Wrocławiu. Szukam zainteresowań
         informatycznych i aktualnie to tworzenie stron internetowych wydaje mi się dość interesujące, ze względu na to, 
@@ -43,6 +43,7 @@
             <li>Bazy danych</li>
         </ul>
     </article>
+    <br>
     <footer>
         <h5>KONTAKT</h5>
         <ul>
