test for different resolution for mobile

--- a/Lista1/Zainteresowania_pozainformatyczne.html
+++ b/Lista1/Zainteresowania_pozainformatyczne.html
@@ -51,7 +51,7 @@
         <div class="images">
             <div class="row">
             <img src="zdjęcia/IMG_0171.jpg" alt="g">
-            <img src="zdjęcia/IMG_0294.jpg  " alt="g">
+            <img srcset="zdjęcia/oie_21152435vQXiWFRY.jpg, zdjęcia/IMG_0294.jpg" sizes="(max-width: 500px), (min-width: 1000px)" src="zdjęcia/oie_21152435vQXiWFRY.jpg" alt="g">
             <img src="zdjęcia/IMG_1405.jpg" alt="g">
             <img src="zdjęcia/IMG_1407.jpg" alt="g">
             </div>
