--- a/Lista1/Zainteresowania_pozainformatyczne.html
+++ b/Lista1/Zainteresowania_pozainformatyczne.html
@@ -32,7 +32,7 @@
         <br>
         <section>
             <h4>Gry komputerowe</h4>
-            <p>>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
+            <p>Od najmłodszych lat pamiętam chwile spędzane przy komputerze bądź konsoli. Niestety,
             ze względu na studia ostatnio mam coraz mniej czasu na to hobby, jednak dalej pozostaje
             ono w mojej pamięci. Najbardziej podobają mi się gry stawiające na opowiadanie intrygujących historii,
             ale lubię także gry mniej na nią stawiające, jednak broniące się oryginalną stylistyką i wciągającym gameplayem.
