--- a/Lista1/moje_projekty.html
+++ b/Lista1/moje_projekty.html
@@ -62,7 +62,7 @@
         <br>
         <section>
             <h4>Hello world</h4>
-            <p>>Niesamowicie skomplikowany projekt, który spędzał mi sen z powiek.</p>
+            <p>Niesamowicie skomplikowany projekt, który spędzał mi sen z powiek.</p>
                 <pre>
                     <code>
  public class Test
@@ -78,7 +78,7 @@
         <br>
         <section>
             <h4>Zdjęcia kotów i żarty o Chucku Norrisie</h4>
-            <p>>Prosty, zabawny skrypt w bashu korzystający z różnych API wykonany jako zadanie na kurs: "Architektura komputerów i systemy operacyjne"</p>
+            <p>Prosty, zabawny skrypt w bashu korzystający z różnych API wykonany jako zadanie na kurs: "Architektura komputerów i systemy operacyjne"</p>
         <pre>
         <code>
 #!/bin/bash
